--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,21 @@
-version: '3.8'
 services:
   postgres:
-    image: postgres:15-alpine
-    container_name: mock-node-db
+    image: postgres:16-alpine
+
+    container_name: my_postgres_db
+
     restart: always
+
     environment:
-      POSTGRES_USER: user        
-      POSTGRES_PASSWORD: password  
-      POSTGRES_DB: mock_node_db  
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+
     ports:
       - "5432:5432"
+
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
 
 volumes:
   postgres-data:
